lib/scilla-temp-res/output.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
cmodule' -> . cmodule [ # ]
## Transitions:
-- On SCILLA_VERSION shift to state 1
-- On cmodule shift to state 360
## Reductions:

State 1:
## Known stack suffix:
## SCILLA_VERSION
## LR(1) items:
cmodule -> SCILLA_VERSION . NUMLIT imports option(library) contract EOF [ # ]
## Transitions:
-- On NUMLIT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## SCILLA_VERSION NUMLIT
## LR(1) items:
cmodule -> SCILLA_VERSION NUMLIT . imports option(library) contract EOF [ # ]
## Transitions:
-- On IMPORT shift to state 3
-- On imports shift to state 10
## Reductions:
-- On LIBRARY CONTRACT
--   reduce production imports ->

State 3:
## Known stack suffix:
## IMPORT
## LR(1) items:
imports -> IMPORT . list(importname) [ LIBRARY CONTRACT ]
## Transitions:
-- On CID shift to state 4
-- On list(importname) shift to state 7
-- On importname shift to state 8
## Reductions:
-- On LIBRARY CONTRACT
--   reduce production list(importname) ->

State 4:
## Known stack suffix:
## CID
## LR(1) items:
importname -> CID . [ LIBRARY CONTRACT CID ]
importname -> CID . AS CID [ LIBRARY CONTRACT CID ]
## Transitions:
-- On AS shift to state 5
## Reductions:
-- On LIBRARY CONTRACT CID
--   reduce production importname -> CID

State 5:
## Known stack suffix:
## CID AS
## LR(1) items:
importname -> CID AS . CID [ LIBRARY CONTRACT CID ]
## Transitions:
-- On CID shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## CID AS CID
## LR(1) items:
importname -> CID AS CID . [ LIBRARY CONTRACT CID ]
## Transitions:
## Reductions:
-- On LIBRARY CONTRACT CID
--   reduce production importname -> CID AS CID

State 7:
## Known stack suffix:
## IMPORT list(importname)
## LR(1) items:
imports -> IMPORT list(importname) . [ LIBRARY CONTRACT ]
## Transitions:
## Reductions:
-- On LIBRARY CONTRACT
--   reduce production imports -> IMPORT list(importname)

State 8:
## Known stack suffix:
## importname
## LR(1) items:
list(importname) -> importname . list(importname) [ LIBRARY CONTRACT ]
## Transitions:
-- On CID shift to state 4
-- On list(importname) shift to state 9
-- On importname shift to state 8
## Reductions:
-- On LIBRARY CONTRACT
--   reduce production list(importname) ->

State 9:
## Known stack suffix:
## importname list(importname)
## LR(1) items:
list(importname) -> importname list(importname) . [ LIBRARY CONTRACT ]
## Transitions:
## Reductions:
-- On LIBRARY CONTRACT
--   reduce production list(importname) -> importname list(importname)

State 10:
## Known stack suffix:
## SCILLA_VERSION NUMLIT imports
## LR(1) items:
cmodule -> SCILLA_VERSION NUMLIT imports . option(library) contract EOF [ # ]
## Transitions:
-- On LIBRARY shift to state 11
-- On option(library) shift to state 228
-- On library shift to state 359
## Reductions:
-- On CONTRACT
--   reduce production option(library) ->

State 11:
## Known stack suffix:
## LIBRARY
## LR(1) items:
library -> LIBRARY . CID list(libentry) [ EOF CONTRACT ]
## Transitions:
-- On CID shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## LIBRARY CID
## LR(1) items:
library -> LIBRARY CID . list(libentry) [ EOF CONTRACT ]
## Transitions:
-- On TYPE shift to state 13
-- On LET shift to state 117
-- On list(libentry) shift to state 225
-- On libentry shift to state 226
## Reductions:
-- On EOF CONTRACT
--   reduce production list(libentry) ->

State 13:
## Known stack suffix:
## TYPE
## LR(1) items:
libentry -> TYPE . CID [ TYPE LET EOF CONTRACT ]
libentry -> TYPE . CID EQ nonempty_list(tconstr) [ TYPE LET EOF CONTRACT ]
## Transitions:
-- On CID shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## TYPE CID
## LR(1) items:
libentry -> TYPE CID . [ TYPE LET EOF CONTRACT ]
libentry -> TYPE CID . EQ nonempty_list(tconstr) [ TYPE LET EOF CONTRACT ]
## Transitions:
-- On EQ shift to state 15
## Reductions:
-- On TYPE LET EOF CONTRACT
--   reduce production libentry -> TYPE CID

State 15:
## Known stack suffix:
## TYPE CID EQ
## LR(1) items:
libentry -> TYPE CID EQ . nonempty_list(tconstr) [ TYPE LET EOF CONTRACT ]
## Transitions:
-- On BAR shift to state 16
-- On tconstr shift to state 114
-- On nonempty_list(tconstr) shift to state 116
## Reductions:

State 16:
## Known stack suffix:
## BAR
## LR(1) items:
tconstr -> BAR . CID [ TYPE LET EOF CONTRACT BAR ]
tconstr -> BAR . CID OF nonempty_list(targ) [ TYPE LET EOF CONTRACT BAR ]
## Transitions:
-- On CID shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## BAR CID
## LR(1) items:
tconstr -> BAR CID . [ TYPE LET EOF CONTRACT BAR ]
tconstr -> BAR CID . OF nonempty_list(targ) [ TYPE LET EOF CONTRACT BAR ]
## Transitions:
-- On OF shift to state 18
## Reductions:
-- On TYPE LET EOF CONTRACT BAR
--   reduce production tconstr -> BAR CID

State 18:
## Known stack suffix:
## BAR CID OF
## LR(1) items:
tconstr -> BAR CID OF . nonempty_list(targ) [ TYPE LET EOF CONTRACT BAR ]
## Transitions:
-- On TID shift to state 19
-- On MAP shift to state 20
-- On LPAREN shift to state 75
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On targ shift to state 111
-- On scid shift to state 80
-- On nonempty_list(targ) shift to state 113
-- On address_typ shift to state 82
## Reductions:

State 19:
## Known stack suffix:
## TID
## LR(1) items:
targ -> TID . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production targ -> TID

State 20:
## Known stack suffix:
## MAP
## LR(1) items:
targ -> MAP . t_map_key t_map_value [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On LPAREN shift to state 21
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_key shift to state 109
-- On scid shift to state 62
-- On address_typ shift to state 63
## Reductions:

State 21:
## Known stack suffix:
## LPAREN
## LR(1) items:
t_map_key -> LPAREN . scid RPAREN [ MAP LPAREN HEXLIT CID ]
t_map_key -> LPAREN . address_typ RPAREN [ MAP LPAREN HEXLIT CID ]
## Transitions:
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On scid shift to state 105
-- On address_typ shift to state 107
## Reductions:

State 22:
## Known stack suffix:
## HEXLIT
## LR(1) items:
scid -> HEXLIT . PERIOD CID [ UNDERSCORE TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On PERIOD shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## HEXLIT PERIOD
## LR(1) items:
scid -> HEXLIT PERIOD . CID [ UNDERSCORE TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET LBRACE IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On CID shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## HEXLIT PERIOD CID
## LR(1) items:
scid -> HEXLIT PERIOD CID . [ UNDERSCORE TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET LBRACE IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET LBRACE IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production scid -> HEXLIT PERIOD CID

State 25:
## Known stack suffix:
## CID
## LR(1) items:
address_typ -> CID . WITH END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID . WITH CONTRACT loption(separated_nonempty_list(COMMA,address_type_field)) END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID . WITH LIBRARY END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID . WITH SPID END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID . WITH CONTRACT LPAREN loption(separated_nonempty_list(COMMA,param_pair)) RPAREN loption(separated_nonempty_list(COMMA,address_type_field)) END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
scid -> CID . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
scid -> CID . PERIOD CID [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On WITH shift to state 26
-- On PERIOD shift to state 56
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production scid -> CID

State 26:
## Known stack suffix:
## CID WITH
## LR(1) items:
address_typ -> CID WITH . END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID WITH . CONTRACT loption(separated_nonempty_list(COMMA,address_type_field)) END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID WITH . LIBRARY END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID WITH . SPID END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID WITH . CONTRACT LPAREN loption(separated_nonempty_list(COMMA,param_pair)) RPAREN loption(separated_nonempty_list(COMMA,address_type_field)) END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On SPID shift to state 27
-- On LIBRARY shift to state 29
-- On END shift to state 31
-- On CONTRACT shift to state 32
## Reductions:

State 27:
## Known stack suffix:
## CID WITH SPID
## LR(1) items:
address_typ -> CID WITH SPID . END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On END shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## CID WITH SPID END
## LR(1) items:
address_typ -> CID WITH SPID END . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production address_typ -> CID WITH SPID END

State 29:
## Known stack suffix:
## CID WITH LIBRARY
## LR(1) items:
address_typ -> CID WITH LIBRARY . END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On END shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## CID WITH LIBRARY END
## LR(1) items:
address_typ -> CID WITH LIBRARY END . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production address_typ -> CID WITH LIBRARY END

State 31:
## Known stack suffix:
## CID WITH END
## LR(1) items:
address_typ -> CID WITH END . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production address_typ -> CID WITH END

State 32:
## Known stack suffix:
## CID WITH CONTRACT
## LR(1) items:
address_typ -> CID WITH CONTRACT . loption(separated_nonempty_list(COMMA,address_type_field)) END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
address_typ -> CID WITH CONTRACT . LPAREN loption(separated_nonempty_list(COMMA,param_pair)) RPAREN loption(separated_nonempty_list(COMMA,address_type_field)) END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On LPAREN shift to state 33
-- On FIELD shift to state 95
-- On separated_nonempty_list(COMMA,address_type_field) shift to state 97
-- On loption(separated_nonempty_list(COMMA,address_type_field)) shift to state 103
-- On address_type_field shift to state 100
## Reductions:
-- On END
--   reduce production loption(separated_nonempty_list(COMMA,address_type_field)) ->

State 33:
## Known stack suffix:
## CID WITH CONTRACT LPAREN
## LR(1) items:
address_typ -> CID WITH CONTRACT LPAREN . loption(separated_nonempty_list(COMMA,param_pair)) RPAREN loption(separated_nonempty_list(COMMA,address_type_field)) END [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On ID shift to state 34
-- On separated_nonempty_list(COMMA,param_pair) shift to state 88
-- On param_pair shift to state 89
-- On loption(separated_nonempty_list(COMMA,param_pair)) shift to state 93
-- On id_with_typ shift to state 92
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,param_pair)) ->

State 34:
## Known stack suffix:
## ID
## LR(1) items:
id_with_typ -> ID . type_annot [ RPAREN EQ END COMMA ]
## Transitions:
-- On COLON shift to state 35
-- On type_annot shift to state 87
## Reductions:

State 35:
## Known stack suffix:
## COLON
## LR(1) items:
type_annot -> COLON . typ [ RPAREN EQ END COMMA ]
## Transitions:
-- On TID shift to state 36
-- On MAP shift to state 37
-- On LPAREN shift to state 67
-- On HEXLIT shift to state 22
-- On FORALL shift to state 68
-- On CID shift to state 25
-- On typ shift to state 86
-- On scid shift to state 74
-- On address_typ shift to state 78
## Reductions:

State 36:
## Known stack suffix:
## TID
## LR(1) items:
typ -> TID . [ THROW TARROW SPID SEND RPAREN MATCH ID FORALL EVENT EQ EOF END DELETE COMMA CID ACCEPT ]
## Transitions:
## Reductions:
-- On THROW TARROW SPID SEND RPAREN MATCH ID FORALL EVENT EQ EOF END DELETE COMMA CID ACCEPT
--   reduce production typ -> TID

State 37:
## Known stack suffix:
## MAP
## LR(1) items:
typ -> MAP . t_map_key t_map_value [ THROW TARROW SPID SEND RPAREN MATCH ID FORALL EVENT EQ EOF END DELETE COMMA CID ACCEPT ]
## Transitions:
-- On LPAREN shift to state 21
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_key shift to state 38
-- On scid shift to state 62
-- On address_typ shift to state 63
## Reductions:

State 38:
## Known stack suffix:
## MAP t_map_key
## LR(1) items:
typ -> MAP t_map_key . t_map_value [ THROW TARROW SPID SEND RPAREN MATCH ID FORALL EVENT EQ EOF END DELETE COMMA CID ACCEPT ]
## Transitions:
-- On MAP shift to state 39
-- On LPAREN shift to state 41
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_value_allow_targs_deprecated shift to state 42
-- On t_map_value shift to state 66
-- On scid shift to state 50
-- On address_typ shift to state 54
## Reductions:

State 39:
## Known stack suffix:
## MAP
## LR(1) items:
t_map_value -> MAP . t_map_key t_map_value [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On LPAREN shift to state 21
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_key shift to state 40
-- On scid shift to state 62
-- On address_typ shift to state 63
## Reductions:

State 40:
## Known stack suffix:
## MAP t_map_key
## LR(1) items:
t_map_value -> MAP t_map_key . t_map_value [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On MAP shift to state 39
-- On LPAREN shift to state 41
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_value_allow_targs_deprecated shift to state 42
-- On t_map_value shift to state 65
-- On scid shift to state 50
-- On address_typ shift to state 54
## Reductions:

State 41:
## Known stack suffix:
## LPAREN
## LR(1) items:
t_map_value -> LPAREN . t_map_value_allow_targs RPAREN [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On MAP shift to state 39
-- On LPAREN shift to state 41
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_value_allow_targs_deprecated shift to state 42
-- On t_map_value_allow_targs shift to state 43
-- On t_map_value shift to state 45
-- On scid shift to state 46
-- On address_typ shift to state 54
## Reductions:

State 42:
## Known stack suffix:
## t_map_value_allow_targs_deprecated
## LR(1) items:
t_map_value -> t_map_value_allow_targs_deprecated . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production t_map_value -> t_map_value_allow_targs_deprecated

State 43:
## Known stack suffix:
## LPAREN t_map_value_allow_targs
## LR(1) items:
t_map_value -> LPAREN t_map_value_allow_targs . RPAREN [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On RPAREN shift to state 44
## Reductions:

State 44:
## Known stack suffix:
## LPAREN t_map_value_allow_targs RPAREN
## LR(1) items:
t_map_value -> LPAREN t_map_value_allow_targs RPAREN . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production t_map_value -> LPAREN t_map_value_allow_targs RPAREN

State 45:
## Known stack suffix:
## t_map_value
## LR(1) items:
t_map_value_allow_targs -> t_map_value . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production t_map_value_allow_targs -> t_map_value

State 46:
## Known stack suffix:
## scid
## LR(1) items:
t_map_value -> scid . [ RPAREN ]
t_map_value_allow_targs -> scid . nonempty_list(t_map_value_args) [ RPAREN ]
t_map_value_allow_targs_deprecated -> scid . nonempty_list(t_map_value_args) [ RPAREN ]
## Transitions:
-- On MAP shift to state 47
-- On LPAREN shift to state 51
-- On HEXLIT shift to state 22
-- On CID shift to state 55
-- On t_map_value_args shift to state 58
-- On scid shift to state 59
-- On nonempty_list(t_map_value_args) shift to state 64
## Reductions:
-- On RPAREN
--   reduce production t_map_value -> scid

State 47:
## Known stack suffix:
## MAP
## LR(1) items:
t_map_value_args -> MAP . t_map_key t_map_value [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On LPAREN shift to state 21
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_key shift to state 48
-- On scid shift to state 62
-- On address_typ shift to state 63
## Reductions:

State 48:
## Known stack suffix:
## MAP t_map_key
## LR(1) items:
t_map_value_args -> MAP t_map_key . t_map_value [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On MAP shift to state 39
-- On LPAREN shift to state 41
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_value_allow_targs_deprecated shift to state 42
-- On t_map_value shift to state 49
-- On scid shift to state 50
-- On address_typ shift to state 54
## Reductions:

State 49:
## Known stack suffix:
## MAP t_map_key t_map_value
## LR(1) items:
t_map_value_args -> MAP t_map_key t_map_value . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production t_map_value_args -> MAP t_map_key t_map_value

State 50:
## Known stack suffix:
## scid
## LR(1) items:
t_map_value -> scid . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
t_map_value_allow_targs_deprecated -> scid . nonempty_list(t_map_value_args) [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On MAP shift to state 47
-- On LPAREN shift to state 51
-- On HEXLIT shift to state 22
-- On CID shift to state 55
-- On t_map_value_args shift to state 58
-- On scid shift to state 59
-- On nonempty_list(t_map_value_args) shift to state 61
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production t_map_value -> scid
** Conflict on MAP LPAREN HEXLIT CID

State 51:
## Known stack suffix:
## LPAREN
## LR(1) items:
t_map_value_args -> LPAREN . t_map_value_allow_targs RPAREN [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On MAP shift to state 39
-- On LPAREN shift to state 41
-- On HEXLIT shift to state 22
-- On CID shift to state 25
-- On t_map_value_allow_targs_deprecated shift to state 42
-- On t_map_value_allow_targs shift to state 52
-- On t_map_value shift to state 45
-- On scid shift to state 46
-- On address_typ shift to state 54
## Reductions:

State 52:
## Known stack suffix:
## LPAREN t_map_value_allow_targs
## LR(1) items:
t_map_value_args -> LPAREN t_map_value_allow_targs . RPAREN [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
-- On RPAREN shift to state 53
## Reductions:

State 53:
## Known stack suffix:
## LPAREN t_map_value_allow_targs RPAREN
## LR(1) items:
t_map_value_args -> LPAREN t_map_value_allow_targs RPAREN . [ TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT ]
## Transitions:
## Reductions:
-- On TYPE TRANSITION TID THROW TARROW SPID SEND SEMICOLON RPAREN RBRACE PROCEDURE MATCH MAP LPAREN LET IN ID HEXLIT FORALL FIELD EVENT EQ EOF END DELETE CONTRACT COMMA CID BAR ARROW ACCEPT
--   reduce production t_map_value_args -> LPAREN t_map_value_allow_targs RPAREN
